--- a/UnofficialCrusaderPatch/Localization/Localization.txt
+++ b/UnofficialCrusaderPatch/Localization/Localization.txt
@@ -85,14 +85,15 @@ ui_welcometext
 "Dies ist ein inoffizieller Patch für Stronghold Crusader.
 Das Projekt ist Open-Source unter [ref] zu finden.
 
-Potenziell wird jede Crusader-Version unterstützt, die Änderungen wurden allerdings anhand der 1.41 Steam-Version hergeleitet. Im Falle von Versions-Inkompatibilität wird der Setup jedoch Fehlermeldungen zeigen.
+Potenziell wird jede Crusader-Version unterstützt, die Änderungen wurden allerdings anhand der 1.41 Steam-Version hergeleitet. Im Falle von Versions-Inkompatibilität wird der Setup Fehlermeldungen zeigen. Die installierte Patch-Version wird unten links im Hauptmenü angezeigt.
 
 Vor jeglichen Änderungen werden Backup-Dateien erstellt, die über den 'Deinstallieren'-Button oder manuell wiederhergestellt werden können."
 
 "This is an unofficial patch for Stronghold Crusader.
 The project ist available as open-source via [ref].
 
-Any Crusader version is potentially supported, but since the changes where derived with the 1.41 Steam-Version, incompatibilities may appear. The setup will then show error messages.
+Any Crusader version is potentially supported, but since the changes where derived with the 1.41 Steam-Version, incompatibilities may appear. The setup will then show error messages. The installed patch version is shown in the bottom left corner of the main menu.
+
 
 Before any changes, backup files will be created. These can be restored via the 'Uninstall'-button or manually."
 }
