--- a/UnofficialCrusaderPatch/Localization/Localization.txt
+++ b/UnofficialCrusaderPatch/Localization/Localization.txt
@@ -54,12 +54,12 @@ ai_buy
 
 ai_buy_descr
 {
-	"In Vanilla benutzen einige der neuen KIs den Marktplatz nicht richtig. Dies ist hiermit behoben:
+	"In Vanilla benutzen einige der neuen KIs den Marktplatz nicht richtig. Die folgenden Verbesserungen werden hiermit vorgenommen:
  - Friedrich und Marschall kaufen Waffen und Rüstungen
  - Der Abt und Emir kaufen Bögen
  - Wazir kauft Obst wie Nizar & Emir"
 
-	"In vanilla, some of the new AIs do not use the trading outpost correctly. This is fixed now:
+	"In vanilla, some of the new AIs do not use the trading outpost correctly. The following improvements will be carried out with this:
  - Frederick and Marshal buy weapons and armors
  - The Abbot and Emir buy bows
  - Wazir buys apples like Nizar & Emir do"
@@ -156,13 +156,13 @@ ui_cancel
 	"Cancel"
 }
 
-ai_evreyfixed
+aiv_evreyfixed
 {
 	"Evreys gefixte Vanilla-Burgen"
 	"Evrey's fixed vanilla castles"
 }
 
-ai_evreyfixed_descr
+aiv_evreyfixed_descr
 {
 	"Behebt Fehler der Vanilla-KI-Burgen, wie z.B. fehlende Häuser und Gilden oder blockierte Ausgänge.
 Erstellt von Evrey ([ref2])"
@@ -170,27 +170,19 @@ Erstellt von Evrey ([ref2])"
 Created by Evrey ([ref2])"
 }
 
-ai_evreyimproved
+aiv_evreyimproved
 {
 	"Evreys verbesserte KI-Burgen"
 	"Evrey's improved AI castles"
 }
 
-ai_evreyimproved_descr
+aiv_evreyimproved_descr
 {
 	"Gibt den KI-Lords neue verbesserte Burgen, während der Stil so Vanilla wie möglich gehalten wird.
 Erstellt von Evrey ([ref2])"
 
 	"Grants the AI-Lords new and improved castles, while staying close to the vanilla style.
 Created by Evrey ([ref2])"
-}
-
-ui_aivlimit
-{
-	"Du kannst nur eine KI-Änderung gleichzeitig aktiv haben,
- bitte deaktiviere alle bis auf eine."
-	"You can only have one AI change at a time active,
- please deactivate all but one."
 }
 
 ui_uninstall
