more playercolor ui elements

--- a/UnofficialCrusaderPatch/Localization/Localization.txt
+++ b/UnofficialCrusaderPatch/Localization/Localization.txt
@@ -387,12 +387,30 @@ ai_demolish
 	"Deactivate demolishing for money of the AI lords"
 }
 
-ai_demolish_descr
+ai_demolish_walls
+{
+	"Befestigungsanlagen"
+	"fortification buildings"
+}
+
+ai_demolish_eco
+{
+	"Wirtschaftsgebäude"
+	"econonmy buildings"
+}
+
+ai_demolish_walls_descr
+{
+	" "
+	" "
+}
+
+ai_demolish_eco_descr
 {
 	"Wenn die KI sich bedrängt fühlt und schnell an Geld für Truppen kommen will, reißt sie gerne mal ihre &
 komplette Wirtschaft oder Befestigungsanlagen ein. Manchmal wird dieses Feature aber auch völlig ohne scheinbaren &
 Grund ausgelöst und kann darum hier ausgestellt werden."
-	"If the AI feels pressured, it likes to demolishes its economy and castle buildings to get quick money for troops. &
+	"If the AI feels pressured, it likes to demolishes its economy or fortification buildings to get quick money for troops. &
 This feature sometimes seems to be triggered without any visible reason and thus can be disabled here."
 }
 
@@ -408,4 +426,16 @@ ai_tethers_descr
 Dies kann hier deaktiviert werden, da es zu Ochsenjoch-Spam führt, wenn die Steinbrüche der AI immer wieder zerstört werden."
 	"Usually, the AI builds for each new stone quarry a new ox tether, independent of how many tether already exist. This &
 can be disabled here, since it leads to ox tether spam if the AIs' quarries get destroyed repeatedly."
+}
+
+o_onlyai
+{
+	"Purer-KI-Modus aktivieren"
+	"Activate AI-only-mode"
+}
+
+o_onlyai_descr
+{
+	"Entfernt Spieler 1 sodass man nur noch zugucken kann und 8 KIs in einem Kreuzzug möglich sind."
+	"Removes player 1 so that you can only spectate and makes 8 AIs in one round possible."
 }
